2006-09-15 Carlos Nieves Onega <cnieves@iespana.es>

	* po/ru.po: Updated russian translation provided by Andy Shevchenko,
	  (bug #1559106 submitted by Chitlesh). Thanks.
	
2006-09-08 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/prototype.h, scheme/gschem.scm, src/g_keys.c, src/x_event.c,
	src/x_window.c: Applied another patch for Bug#1553544: "New pages
	inadvertantly created when adding nets in gschem" from Peter Clifton
	to address the focus problem with the first patch.  This one is 
	much better and cleaner.

2006-09-07 SDB  <sdb@cloud9.net>

	* src/xprint.c: Added "static void" declaration to 
	print_dialog_get_property to prevent compiler error
	under older version of gcc. 
	
2006-09-06 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated program version to 20060906.

	* lib/system-gschemrc.in: Applied patch for Bug#1552338: 
	system-gschemrc gedadata/rc mismatch (filed by Charles Lepple).  
	Also fixed a few other instances where the directory for the
	scheme files were wrong.

	* lib/system-gschemrc.in: Changed the mouse gain to be unity since
	various people have mentioned that mouse pan doesn't feel right with
	a large value.

	* src/x_window.c: Had to put the keypress signal handler back on 
	the main_window (instead of just the drawing_window), because the
	up cursor key stopped working.  The original reason for this movement
	was to fix Bug#1552778 and Bug#1553544 which are still fixed (even
	with this move it seems), however the focus on the toolbar seems
	to move when you move the cursor keys (which is a little odd).

	* po/it_IT.po: Updated to the last version provided by Michele 
	Petrecca. Thanks.

	* src/gschem.c, src/g_rc.c, src/x_dialog.c: Added CUSTOM_VERSION
	to all printfs/output/dialog boxes where VERSION is used so that
	it is easier to create custom version of gEDA/gaf.

	* include/Makefile.am: Oops, x_print.h wasn't added.  This was
	discovered by make distcheck (have I mentioned how much I like 