@@ -46,7 +46,10 @@ README for libgeda
 
 	libgdgeda 2.0.15 [OPTIONAL] - if you want the ability to write png 
 	images.  New versions of libgeda/gschem write png using internal code,
-	so you will still be able to create png images without using libgdgeda. 
+	so you will still be able to create png images without using libgdgeda.
+ 	Since 20060922, gd 2.0.x is used instead of libgdgeda, so libgdgeda 
+	is not needed anymore.
+
         libgdgeda is based on gd 2.0.15  The homepage for gd 2.0.x is
 	http://www.boutell.com/gd  You can find libgdgeda on the gEDA
 	website: http://www.geda.seul.org/dist
@@ -57,6 +60,8 @@ README for libgeda
 
         If you use libgdgeda then you also need libpng.  libpng can be found 
         at: http://www.libpng.org/pub/png/pngcode.html  libpng can also be              found on the gEDA website: http://www.geda.seul.org/dist
+
+	
 
 	An understanding that this software is ALPHA release quality :)
 
