@@ -23,8 +23,8 @@
 #include <gtk/gtk.h>
 #include <libguile.h>
 
-#ifdef HAS_LIBGDGEDA
-#include <gdgeda/gd.h>
+#ifdef HAS_LIBGD
+#include <gd.h>
 #endif
 
 #include "defines.h"
@@ -1659,7 +1659,7 @@ void o_box_print_old(TOPLEVEL *w_current, FILE *fp,
 
 /*! \brief Draw a box in an image.
  *  \par Function Description
- *  This function draws a box in an image with the libgdgeda function
+ *  This function draws a box in an image with the libgd function
  *  #gdImageRectangle().
  *
  *  \param [in] w_current   The TOPLEVEL object.
@@ -1687,7 +1687,7 @@ void o_box_image_write(TOPLEVEL *w_current, OBJECT *o_current,
   }
 
   /* assumes screen coords are already calculated correctly */
-#ifdef HAS_LIBGDGEDA
+#ifdef HAS_LIBGD
 
   gdImageSetThickness(current_im_ptr, SCREENabs(w_current,
                                                 o_current->line_width));
